--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,15 @@
 <resources>
     <string name="app_name">Chameleon</string>
-
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+
+    <string-array name="items_list">
+        <item>Palettes</item>
+        <item>Placeholder</item>
+        <item>Placeholder</item>
+    </string-array>
+
+    <string name="drawer_open"> Opens the Drawer Nav drawer</string>
+    <string name="drawer_close"> Closes the Drawer Nav drawer</string>
+
+
 </resources>
